welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:25: error: not enough arguments for method serpent: (nb: Int, droite: Boolean)Unit.
Unspecified value parameter droite.
    serpent(nb)
           ^